swithced to geo-location-javascript

--- a/static/main.ejs
+++ b/static/main.ejs
@@ -1,6 +1,7 @@
 <html>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.3.1/jquery.cookie.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/geo-location-javascript/0.4.8/geo-min.js"></script>
 <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyBteJTTaKlmbnDq4OpxXOVesyalgxoWLJE&sensor=true"></script>
 <script>
 pageid = "<%= pageid %>"
