--- a/static/main.ejs
+++ b/static/main.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.3.1/jquery.cookie.min.js"></script>
@@ -7,18 +8,27 @@
 pageid = "<%= pageid %>"
 </script>
 <script src="main.js"></script>
-<h4>Send your friends this link to share your locations with each other:</h4>
+
+<body style="border: 0px; margin: 0px">
+
+<div style="position:absolute; top: 0px; right: 0px; z-index: 10000; background-color: white; border-radius: 15px; border-color: grey; border-width: 3px; border-style: solid;">
+
+<h4>Send your friends this link to share your location <a href="#" onclick="$('#detailedDescription').show(); $('#showDetailsButton').hide()" id="showDetailsButton">(details)</a></h4>
 <h2><a href="<%= webpage %>"><%= webpage %></a></h2>
-<h2>(<a href="sms:555:<%= webpage %>">send link via SMS</a> or <a href="mailto:someone@example.com?subject=My%20Location&body=<%= webpageURIEncoded %>">email</a>) <a href="#" onclick="$('#detailedDescription').show(); $('#showDetailsButton').hide()" id="showDetailsButton">Details</a> </h2>
+<!--<h2>(<a href="sms:555:<%= webpage %>">send link via SMS</a> or <a href="mailto:someone@example.com?subject=My%20Location&body=<%= webpageURIEncoded %>">email</a>) <a href="#" onclick="$('#detailedDescription').show(); $('#showDetailsButton').hide()" id="showDetailsButton">Details</a> </h2>-->
 <div id="detailedDescription" style="display: none">Are you trying to meet up with someone? If they visit the link above, it will show each of your locations on the map. Your locations will automatically update as you move around. Once done, close this page, and it will stop sharing your location.
 <br/>
-This link is randomly generated whenever you visit <a href="<%= webRoot %>"><%= webRoot %></a>, and is known only by you and those you share it with. You are currently sharing your location with <span id="numOtherUsers">0</span> other users. Your location in GPS coordinates is <a id="myGPSCoordinates" href="#">(x,y)</a>, while your friends' coordinates are: <span id="friendGPSCoordinates"></span>. If you have additional questions, contact <a href="http://gkovacs.github.com">Geza Kovacs</a>.
+This link is randomly generated whenever you visit <a href="<%= webRoot %>"><%= webRoot %></a>, and is known only by you and those you share it with. You are currently sharing your location with <span id="numOtherUsers">0</span> other users. Your location in GPS coordinates is <a id="myGPSCoordinates" href="#">(x,y)</a>, while your friends' coordinates are: <span id="friendGPSCoordinates"></span>. If you have additional questions, contact <a href="http://gkovacs.github.com">Geza Kovacs</a>.<br/>
 <a href="#" onclick="$('#detailedDescription').hide(); $('#showDetailsButton').show()">Hide Details</a>
 </div>
 
 <div id="errors"></div>
 
-<div id="map_canvas" style="width:100%; height:500px"></div>
+</div>
+
+<div id="map_canvas" style="border: 0px; margin: 0px; border-top: 0px; border-bottom: 0px; border-left: 0px; border-right: 0px"></div>
+
+</body>
 
 </html>
 
