--- a/static/main.ejs
+++ b/static/main.ejs
@@ -9,7 +9,7 @@ pageid = "<%= pageid %>"
 </script>
 <script src="main.js"></script>
 
-<body style="border: 0px; margin: 0px">
+<body style="border: 0px; margin: 0px; overflow: hidden; width: 100%; height: 100%">
 
 <div style="position:absolute; top: 0px; right: 0px; z-index: 10000; background-color: white; border-radius: 15px; border-color: grey; border-width: 3px; border-style: solid;">
 
