added title and keywords

--- a/static/main.ejs
+++ b/static/main.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>FindUs - Easy Location Sharing</title>
+<meta name="DESCRIPTION" content="FindUs lets you share your location with your friends to help you find each other." />
+<meta name="KEYWORDS" content="findus,location,sharing,mobile,social" />
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="HandheldFriendly" content="true" />
 </head>
