--- a/static/main.ejs
+++ b/static/main.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>FindUs - Easy Location Sharing</title>
-<meta name="DESCRIPTION" content="FindUs lets you share your location with your friends to help you find each other." />
+<title>FindUs - Fast Location Sharing</title>
+<meta name="DESCRIPTION" content="FindUs lets you share your location with people to help you find each other." />
 <meta name="KEYWORDS" content="findus,location,sharing,mobile,social" />
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="HandheldFriendly" content="true" />
@@ -20,7 +20,7 @@ pageid = "<%= pageid %>"
 
 <div style="position:absolute; top: 0px; right: 0px; z-index: 10000; background-color: white; border-radius: 15px; border-color: grey; border-width: 3px; border-style: solid; padding-left: 5px; padding-right: 5px; padding-bottom: 5px; padding-top: 5px">
 
-<span style="font-size: medium; text-align: center">Send your friends this link to share your location
+<span style="font-size: medium; text-align: center">Send people this link to share your locations with each other
 <a href="#" onclick="$('#detailedDescription').show(); $('#showDetailsButton').hide(); $('#hideDetailsButton').show()" id="showDetailsButton">(details)</a>
 <a href="#" style="display: none" onclick="$('#detailedDescription').hide(); $('#hideDetailsButton').hide(); $('#showDetailsButton').show()" id="hideDetailsButton">(hide details)</a></span><br/>
 <a style="font-size: large; text-align: center; font-weight: bold" href="<%= webpage %>"><%= webpageSansHTTP %></a>
