--- a/static/main.ejs
+++ b/static/main.ejs
@@ -27,7 +27,7 @@ pageid = "<%= pageid %>"
 <!--<h2>(<a href="sms:555:<%= webpage %>">send link via SMS</a> or <a href="mailto:someone@example.com?subject=My%20Location&body=<%= webpageURIEncoded %>">email</a>) <a href="#" onclick="$('#detailedDescription').show(); $('#showDetailsButton').hide()" id="showDetailsButton">Details</a> </h2>-->
 <div id="detailedDescription" style="display: none">Are you trying to meet up with someone? If they visit the link above, it will show each of your locations on the map. Your locations will automatically update as you move around. Once done, close this page, and it will stop sharing your location.
 <br/>
-This link is randomly generated whenever you visit <a href="<%= webRoot %>"><%= webRoot %></a>, and is known only by you and those you share it with. You are currently sharing your location with <span id="numOtherUsers">0</span> other users. Your location in GPS coordinates is <a id="myGPSCoordinates" href="#">(x,y)</a>, while your friends' coordinates are: <span id="friendGPSCoordinates"></span>. If you have additional questions, contact <a href="http://gkovacs.github.com">Geza Kovacs</a>.<br/>
+This link is randomly generated whenever you visit <a href="<%= webRoot %>"><%= webRoot %></a>, and is known only by you and those you share it with. You are currently sharing your location with <span id="numOtherUsers">0</span> other users. Your location in GPS coordinates is <a id="myGPSCoordinates" href="#">(x,y)</a>, and the people you're sharing with are at: <span id="friendGPSCoordinates"></span>. If you have additional questions, contact <a href="http://gkovacs.github.com">Geza Kovacs</a>.<br/>
 
 <div id="errors"></div>
 
